# 9_BLDC_Controls

./: README.md
sketch_jun8a/: ADDR.h  AHT10.cpp  AHT10.h  AHT10_Sensor.h  BLDC9.cpp  BLDC9.h  BLDC_1.cpp  BLDC_1.h  BLDC_2.cpp  BLDC_2.h  BLDC_3.cpp  BLDC_3.h  BLDC_4.cpp  BLDC_4.h  BLDC_5.cpp  BLDC_5.h  BLDC_6.cpp  BLDC_6.h  BLDC_7.cpp  BLDC_7.h  BLDC_8.cpp  BLDC_8.h  BLDC_9.cpp  BLDC_9.h  BLDC_Controls.cpp  BLDC_Controls.h  BMP.cpp  BMP.h  CMakeLists.txt  EEPROM_AT24CXX.h  Encoder.cpp  Encoder.h  ExEEPROM.cpp  ExEEPROM.h  Firebase.cpp  XBMP10.cpp  eFirebase.cpp  eFirebase.h  filelist.txt  rmDataEEPROM.h  (+33 more)
sketch_jun8a/test/libraries/: lv_conf.h
sketch_jun8a/test/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_BLDC_1.c  ui_BLDC_2.c  ui_BLDC_3.c  ui_BLDC_4.c  ui_BLDC_5.c  ui_BLDC_6.c  ui_BLDC_7.c  ui_BLDC_8.c  ui_BLDC_9.c  ui_MainScreen.c  ui_ScreenSettings.c  ui_WIFI_Screen.c  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_112426812.c  ui_img_1318045025.c  ui_img_1377203910.c  ui_img_1754639307.c  ui_img_1782230515.c  ui_img_1924603646.c  ui_img_2047884213.c  ui_img_475571255.c  ui_img_777776686.c
sketch_jun8a/ui/: ui.c  ui.h  ui_BLDC_1.c  ui_BLDC_2.c  ui_BLDC_3.c  ui_BLDC_4.c  ui_BLDC_5.c  ui_BLDC_6.c  ui_BLDC_7.c  ui_BLDC_8.c  ui_BLDC_9.c  ui_MainScreen.c  ui_ScreenSettings.c  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_112426812.c  ui_img_1318045025.c  ui_img_1377203910.c  ui_img_1754639307.c  ui_img_1782230515.c  ui_img_1924603646.c  ui_img_2047884213.c  ui_img_475571255.c  ui_img_777776686.c
