SET(SOURCES ui_MainScreen.c
    ui_BLDC_1.c
    ui_BLDC_2.c
    ui_BLDC_3.c
    ui_BLDC_4.c
    ui_BLDC_5.c
    ui_BLDC_6.c
    ui_BLDC_7.c
    ui_BLDC_8.c
    ui_BLDC_9.c
    ui_WIFI_Screen.c
    ui_Screen1.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_1754639307.c
    ui_img_1924603646.c
    ui_img_112426812.c
    ui_img_1318045025.c
    ui_img_1377203910.c
    ui_img_777776686.c
    ui_img_1782230515.c
    ui_img_475571255.c)

add_library(ui ${SOURCES})
